# BennuEngine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/core/: engine.cpp  engine.h  inputmanager.cpp  inputmanager.h
src/core/math/: aabb.cpp  aabb.h
src/graphics/: buffer.cpp  buffer.h  clusterbuilder.cpp  clusterbuilder.h  depthrenderer.cpp  depthrenderer.h  forwardrenderer.cpp  forwardrenderer.h  framebuffer.cpp  framebuffer.h  renderingdevice.cpp  renderingdevice.h  rendersystem.cpp  rendersystem.h  rendertarget.cpp  rendertarget.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utilities.cpp  utilities.h  vulkancontext.cpp  vulkancontext.h
src/graphics/shaders/: clusterLight.comp  clusterLight.comp.spv  depth.vert.spv  forward.frag  forward.frag.spv  forward.vert  forward.vert.spv  simple.frag  simple.vert  simple.vert.spv
src/graphics/vulkan/: buffer.cpp  renderingdevice.cpp  renderingdevice.h  rendertarget.cpp  rendertarget.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utilities.cpp  vulkancontext.cpp  vulkancontext.h
src/scene/: camera.cpp  camera.h  light.cpp  light.h  material.cpp  material.h  model.cpp  model.h  scene.cpp  scene.h
